--- a/app/scripts/view/template/ruleList.html
+++ b/app/scripts/view/template/ruleList.html
@@ -1,40 +1,5 @@
 <ol class="rules">
   <li class="ruleset" v-repeat="rules.data" v-attr="data-id: $index" v-transition="slide">
-    <div class="rule-container">
-      <button title="Delete" v-on="click: removeRule($data)" class="custom-appearance remove-rule"></button>
-
-      <div class="rule-result">
-        Set the background color to 
-        
-        <input type="color" v-model="data.color"/>
-        
-        when
-        
-        <select name="type" v-model="criteria.type">
-          <option>any</option>
-          <option>all</option>
-        </select>
-        
-        of the selected rules match:
-      </div>
-      
-      <ul class="criteria" v-repeat="criteria.criteria">
-        <li class="rule" v-class="disabled : !enabled, error: !valid">
-          <label class="rule-enabled">
-            <input type="checkbox" name="client" v-model="enabled" />
-            {{* "criteria_label_" + column | i18n}}
-          </label>
-          
-          <div v-if="$data.hasValue()">
-            <input v-attr="disabled:!enabled" type="text" class="value" v-model="value"/>
-        
-            <label class="regex">
-              <input v-attr="disabled:!enabled" type="checkbox" v-model="regex" /> 
-              {{"regex_label" | i18n}}
-            </label>
-          </div>
-        </li>
-      </ul>
-    </div>
+    <div class="rule-container" v-component="rule" v-with="$data"></div>
   </li>
 </ol>
